# Crumblt_Client

./: .clang-format  .gitignore  App.cpp  CMakeLists.txt  Renderer3D.cpp  Renderer3D.h  vcpkg.json
assets/: readme.txt.txt
src/: main.cpp
src/core/: App.cpp  App.h  Auth.cpp  Auth.h  Http.cpp  Http.h
src/network/: PhotonClient.cpp  PhotonClient.h
src/renderer/: Renderer.cpp  Renderer.h  Renderer3D.cpp  Renderer3D.h
src/scene/: Part.h  Player.h  Scene.cpp  Scene.h  SceneLoader.cpp  SceneLoader.h
src/scripting/: ScriptRuntime.cpp  ScriptRuntime.h
